--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   charts_flutter: ^0.9.0
   pull_to_refresh: ^1.5.7
   http: ^0.12.0+4
+  url_launcher: ^5.4.2
+  font_awesome_flutter:
+    git:
+      url: https://github.com/fluttercommunity/font_awesome_flutter.git
+      ref: master
 
 
 dev_dependencies:
